# Tensor-Matrix-Diff

./: .gitmodules  CMakeLists.txt  README.md
.cache/clangd/index/: Expressions.cc.31B056B876D7C2D0.idx  Expressions.cc.81529845DCD80721.idx  Expressions.hpp.4322BC1C732087DF.idx  Expressions.hpp.CAD179C68C75B25B.idx  FiniteDifference.cc.5D63BBEEB552899E.idx  FiniteDifference.hpp.D0EC4A255B69BFF8.idx  MatrixManipulation.cc.AF6846E08A602E9F.idx  MatrixManipulation.hpp.CBB5B3561169E337.idx  example.cc.96889DC73F68200B.idx  test.cc.4B4D0192AE31E861.idx  test.cc.9F6D14CA87E4EC23.idx
TMD/: CMakeLists.txt  Expressions.cc  Expressions.hpp  TMDConfig.hpp.in
examples/: CMakeLists.txt  ExampleConfig.hpp.in  example.cc  gaussian.cc
test/: CMakeLists.txt  TestConfig.hpp.in  example.cc  gaussian.cc  test.cc
